--- a/firstapp/src/common/Header/Header.scss
+++ b/firstapp/src/common/Header/Header.scss
@@ -57,7 +57,7 @@
       padding: 14px;
       gap: 20px;
       .css-tzssek-MuiSvgIcon-root {
-        color: #262b2c;
+        color: hsl(190, 7%, 16%);
       }
       .shoppingbag {
         position: relative;
@@ -83,5 +83,38 @@
 }
 
 @media(max-width: 768px) {
-
+  .navbar {
+    @include flex(row, space-between, center);
+    .leftpart {
+      .logo {
+        margin-right: 0px;
+      }
+    }
+    .rightpart {
+      .cartprofile {
+        margin-left: 0px;
+      }
+    }
+  }
+  
+  .sidebarcontent {
+    max-width: 90%;
+    min-width: 324px;
+    .close {
+      max-width: 100%;
+      padding: 20px;
+      text-align: right;
+    }
+    .sidebarprofile {
+      padding: 20px;
+    }
+    .content {
+      color: #6e7051;
+      @for $i from 0 to 5 {
+       :nth-child(#{$i}) {
+          padding: 20px;
+        }
+      }
+    }
+  }
 }
