auth almost done ig

--- a/firstapp/src/common/LoginDialog/LoginDialog.scss
+++ b/firstapp/src/common/LoginDialog/LoginDialog.scss
@@ -9,6 +9,12 @@
   cursor: pointer;
 }
 
+.sidebarprofile {
+  .profileIcon {
+    cursor: pointer;
+  }
+}
+
 .authform {
   max-width: 400px;
   padding: 20px;
