--- a/firstapp/src/common/Header/Header.scss
+++ b/firstapp/src/common/Header/Header.scss
@@ -59,7 +59,7 @@
       margin-left: 30px;
       @include text-style(16px, 700, 16px);
       @include flex(center, center);
-      padding: 14px;
+      padding: 14px 0px 14px 14px;
       gap: 20px;
       .css-tzssek-MuiSvgIcon-root {
         color: hsl(190, 7%, 16%);
