--- a/firstapp/src/pages/Home/Home.scss
+++ b/firstapp/src/pages/Home/Home.scss
@@ -4,12 +4,11 @@
 
 .homepagewrapper {
   .firstfold {
-    @include flex(start, center);
+    @include flex(flex-start, center);
     position: relative;
     width: 100%;
     .firstfoldbanner {
       width: 100%;
-      // filter: blur(1.5px);
     }
     .firstfoldcontent {
       padding: 40px;
@@ -87,5 +86,8 @@
         text-underline-offset: 5px;
       }
     }
+  }
+  .bestsellers {
+    width: 100%;
   }
 }
