--- a/firstapp/src/common/FilterProducts/FilterProducts.scss
+++ b/firstapp/src/common/FilterProducts/FilterProducts.scss
@@ -30,7 +30,7 @@
           width: 300px;
           height: 380px;
           object-fit: contain;
-          border-radius: 20px;
+          border-radius: 15px;
         }
       }
       .shoecardtitle {
@@ -44,6 +44,17 @@
         font-family: "Poppins";
         color: #f6aa28;
       }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .productswrapper {
+    margin-top: 46px;
+    .shoeslist {
+      @include flex(center,center);
+      padding: 0px;
+      width: 100%;
     }
   }
 }
