--- a/firstapp/src/common/LoginDialog/LoginDialog.scss
+++ b/firstapp/src/common/LoginDialog/LoginDialog.scss
@@ -4,7 +4,7 @@
 
 
 .close {
-  padding: 15px;
+  padding: 10px;
   text-align: end;
   cursor: pointer;
 }
@@ -21,12 +21,12 @@
   font-family: "Poppins";
   .title {
     @include text-style(30px, 700, 30px);
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   .authformgroup {
-    .emailId,.password {
+    .emailId,.password,.fullName {
       width: 100%;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
     }
     .errorMessage {
       margin-top: 10px;
@@ -34,7 +34,7 @@
       color: #d32f2f;
     }
     .remembrpass {
-      margin-bottom: 30px;
+      margin-bottom: 25px;
       @include flex(space-between, center);
       FormControlLabel {
         Checkbox {
@@ -74,7 +74,7 @@
     max-width: 300px;
     .authformgroup {
       .remembrpass{
-        @include flex(space-between, start, column);
+        @include flex(space-between, flex-start, column);
       }
       .register {
         flex-direction: column;
